<resources>
    <string name="app_name">BakeBoutique</string>
    <string name="default_web_client_id">780744737586-vmsbgpd5h04vpl00blmheervfsb808am.apps.googleusercontent.com</string>
    <string name="welcome">Welcome to Bake Boutique</string>
    <string name="signup">Sign Up</string>
    <string name="login">log in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">   Enter your Email</string>
    <string name="password">   Enter your Password</string>
    <string name="login_confirm">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="emailtag">Email</string>
    <string name="passwordtag">Password</string>
    <string name="bake_boutique">Bake Boutique</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_login_with">.............Or login with ............</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="signup_2">SignUp</string>
    <string name="don_t_have_an_acoount">don\'t have an acoount ?</string>
    <string name="text">By continuing, you agree to our Terms Of Service and Privacy Policy</string>
    <string name="welcome1">Welcome!</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">+93044325678</string>
    <string name="phone_no">Phone No</string>
    <string name="already_a_member">Already A member ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="minus">/-</string>
    <string name="plus">/+</string>
    <string name="categories">Categories</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="click_to_start"><![CDATA[<Click to Start>]]></string>
    <string name="choclate_cupcake">choclate Cupcake</string>
    <string name="shopnow">.....ShopNow.....</string>
    <string name="para1">A chesse cupcake is a savory delight that combines a crumbly, buttery crust with a creamy and cheesy filling. These mini treats offer a harmonious blend of sweet and savory flavors, making them a versatile and mouthwatering snack or appetizer. Enjoy them warm for a delightful fusion of textures and flavors.</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="delete_item">Delete item</string>
    <string name="order_confirmed" />
    <string name="monday_to_friday_9_00_am_5_00_pm_nsaturday_10_00_am_2_00_pm_nsunday_closed">Monday to Friday: 9:00 AM - 5:00 PM\nSaturday: 10:00 AM - 2:00 PM\nSunday: Closed</string>
</resources>