<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/purplelight">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/bake_boutique"
        android:textColor="@color/black"
        android:fontFamily="@font/reg"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:textSize="30dp"
        />


    <TextView
        android:id="@+id/textViewWlcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/welcome1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/reg"/>
        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to_continue"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_below="@id/textViewWlcm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/reg"/>
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailtag"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/textViewRegister"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bold"/>


    <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
        android:paddingStart="20dp"
            android:inputType="textEmailAddress"
            android:layout_below="@id/textViewRegister"
            android:background="@drawable/custom_background"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="39dp"/>


    <TextView
        android:id="@+id/textViewphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/textViewEmail"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:fontFamily="@font/bold"/>


    <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:background="@drawable/custom_background"
            android:layout_below="@id/editTextEmail"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
        android:paddingStart="20dp"
            android:layout_marginTop="39dp"/>


    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordtag"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/textViewphone"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:fontFamily="@font/bold"/>


    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/custom_background"
            android:layout_below="@id/editTextPhone"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="46dp"
        android:paddingStart="20dp"/>
    <TextView
        android:id="@+id/textViewcPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/textViewPassword"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:fontFamily="@font/bold"/>

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_below="@id/editTextPassword"
            android:background="@drawable/custom_background"
            android:layout_marginStart="32dp"
            android:paddingStart="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="46dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button_background"
            android:textColor="@android:color/white"
            android:layout_below="@id/textViewTermsAndPrivacy"
            android:layout_marginStart="32dp"

            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"/>


    <TextView
        android:id="@+id/textViewTermsAndPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextConfirmPassword"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/reg"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/NoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_member"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/btnRegister"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/reg"/>
    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/btnRegister"
        android:layout_marginStart="220dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/bold"/>


</RelativeLayout>