<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Landing_Page"
    android:background="@color/purplelight">

    <ImageView
        android:id="@+id/imageViewpic"
        android:layout_width="480dp"
        android:layout_height="300dp"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/chef" />


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="430dp"
        android:layout_height="150dp"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/app" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:layout_below="@id/imageViewLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/reg"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/signup"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/rounded_button_background"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <Button

            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="22dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_above="@id/btnSignUp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

